--- a/src/components/button/button.module.css
+++ b/src/components/button/button.module.css
@@ -15,8 +15,9 @@
   background-color: #bed5a2;
 }
 
-.button:active {
-  background-color: #67893d;
+.button:focus,
+.button:focus:hover {
+  animation: click 0.3s, color-click 0.3s ease-out;
 }
 
 @media screen and (min-width: 768px) {
@@ -73,4 +74,34 @@
   background-color: #f8fbf4;
   color: #c0c7b7;
   cursor: default;
+}
+
+.footer:focus,
+.footer:focus:hover {
+  animation: click 0.3s, bright-color-click 0.3s ease-out;
+}
+
+@keyframes click {
+  0% {
+    transform: translateY(0px);
+  }
+
+  50% {
+    transform: translateY(2px);
+  }
+  100% {
+    transform: translateY(0px);
+  }
+}
+
+@keyframes color-click {
+  50% {
+    background-color: #67893d;
+  }
+}
+
+@keyframes bright-color-click {
+  50% {
+    background-color: #cde7ae;
+  }
 }
