--- a/src/components/checkbox/checkbox.module.css
+++ b/src/components/checkbox/checkbox.module.css
@@ -16,7 +16,10 @@
   width: 20px;
   height: 20px;
   border: 2px solid var(--sub-text-color);
+  box-sizing: border-box;
   border-radius: 2px;
+  cursor: pointer;
+  transition: background-color 0.2s ease-in-out;
 }
 .confirmation__checkbox:checked + label::before {
   background-color: var(--secondary-bg-color);
