--- a/src/components/card-list/card-list.module.css
+++ b/src/components/card-list/card-list.module.css
@@ -2,15 +2,57 @@
   width: 100%;
   padding: 0;
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(189px, 1fr));
-  grid-column-gap: 29px;
-  grid-row-gap: 76px;
+  grid-template-columns: repeat(4, minmax(190px, 1fr));
+  justify-items: flex-start;
+  grid-column-gap: 30px;
+  grid-row-gap: 70px;
+  margin-bottom: 50px;
+}
+
+@media screen and (max-width: 1280px) {
+  .cards {
+    grid-template-columns: repeat(3, minmax(190px, 1fr));
+    grid-column-gap: 25px;
+    grid-row-gap: 60px;
+  }
+}
+
+@media screen and (max-width: 1020px) {
+  .cards {
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-column-gap: 25px;
+    grid-row-gap: 60px;
+  }
 }
 
 @media screen and (max-width: 768px) {
   .cards {
-    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    grid-column-gap: 9px;
+    grid-template-columns: repeat(4, minmax(150px, 1fr));
+    grid-column-gap: 10px;
+    grid-row-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .cards {
+    grid-template-columns: repeat(3, minmax(150px, 1fr));
+    grid-column-gap: 10px;
+    grid-row-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 510px) {
+  .cards {
+    grid-template-columns: repeat(2, minmax(150px, 1fr));
+    grid-column-gap: 10px;
+    grid-row-gap: 16px;
+  }
+}
+
+@media screen and (max-width: 360px) {
+  .cards {
+    grid-template-columns: repeat(1, minmax(150px, 1fr));
+    grid-column-gap: 10px;
     grid-row-gap: 16px;
   }
 }
