--- a/src/components/checkbox/checkbox.module.css
+++ b/src/components/checkbox/checkbox.module.css
@@ -16,6 +16,7 @@
   height: 20px;
   border: 2px solid var(--sub-text-color);
   border-radius: 2px;
+  cursor: pointer;
 }
 .confirmation__checkbox:checked + label::before {
   background-color: var(--secondary-bg-color);
