--- a/src/components/counter/counter.module.css
+++ b/src/components/counter/counter.module.css
@@ -14,6 +14,11 @@
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
+  transition: opacity 0.2s ease-in-out;
+
+  &:hover {
+    opacity: 0.75;
+  }
 }
 
 .button_left {
