--- a/src/components/menu-list/menu-list.module.css
+++ b/src/components/menu-list/menu-list.module.css
@@ -56,6 +56,11 @@
   }
   .link {
     color: var(--main-text-color);
+    transition: color 0.2s ease-out;
+
+    &:hover {
+      color: var(--footer-bg-color);
+    }
   }
   .link_active {
     background-color: var(--secondary-bg-color);
