--- a/src/components/menu-sections/dessert/dessert.module.css
+++ b/src/components/menu-sections/dessert/dessert.module.css
@@ -2,7 +2,7 @@
   width: 100%;
 }
 .title {
-  margin: 24px 0;
+  margin: 55px 0 24px !important;
 }
 @media screen and (min-width: 768px) {
   .title {
