--- a/src/components/menu-sections/starter/starter.module.css
+++ b/src/components/menu-sections/starter/starter.module.css
@@ -10,7 +10,7 @@
   z-index: 1;
 }
 .title {
-  margin: 24px 0;
+  margin: 55px 0 24px !important;
 }
 @media screen and (min-width: 768px) {
   .title {
