--- a/src/components/modal/modal.module.css
+++ b/src/components/modal/modal.module.css
@@ -46,6 +46,12 @@
   cursor: pointer;
 }
 
+@media screen and (min-width: 768px) {
+  .modal__background {
+    display: none;
+  }
+}
+
 @keyframes modal {
   0% {
     transform: translateX(-90px);
