--- a/src/components/scroll-buttons/scroll-buttons.module.css
+++ b/src/components/scroll-buttons/scroll-buttons.module.css
@@ -12,21 +12,50 @@
   padding: 6px 18px;
   border-radius: 20px;
   cursor: pointer;
+  transition: color 0.2s ease-out;
+
+  &:hover {
+    color: var(--footer-bg-color);
+  }
 }
 .active {
   background-color: var(--secondary-bg-color);
   color: var(--button-text-color);
+
+  &:hover {
+    color: var(--button-text-color);
+  }
 }
 @media screen and (min-width: 768px) {
   .items {
     gap: 8px;
     flex-direction: column;
-    margin: 25px 0 0;
+    margin: 25px 0 0 18px;
   }
   .link {
+    position: relative;
     color: var(--main-text-color);
     font-size: var(--desktop-maintext-font);
-    padding: 0 10px;
     background-color: transparent;
+    padding: 0;
+
+    &:hover {
+      color: var(--footer-bg-color);
+    }
+
+    &::after {
+      content: "";
+      position: absolute;
+      display: block;
+      margin-top: 2px;
+      width: 0;
+      height: 0.5px;
+      background: var(--footer-bg-color);
+      transition: width 0.3s;
+    }
+
+    &:hover::after {
+      width: 100%;
+    }
   }
 }
